Included comments for expanded heap